Fixing layout issues on various widths

--- a/styles/scss/About.module.scss
+++ b/styles/scss/About.module.scss
@@ -62,7 +62,7 @@
   }
 }
 
-@media (max-width: $mobileWidth) {
+@media (max-width: 909px) {
   .aboutWrapper {
     align-items: flex-start;
   }
@@ -79,6 +79,8 @@
       width: 100%;
       height: 240px;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
     }
 
     .info {
