--- a/styles/scss/ProjectCards.module.scss
+++ b/styles/scss/ProjectCards.module.scss
@@ -10,21 +10,20 @@
 .projectCardsWrapper {
   max-width: 1200px;
   display: flex;
-  justify-content: flex-start;
   flex-wrap: wrap;
   gap: 24px;
 
   // 3 columns
-  @media (max-width: 1199px) and (min-width: 954px) {
+  @media (max-width: $mobileWidth) and (min-width: calc($twoColumnWidthMax + 1px)) {
     width: 894px;
   }
 
   // 2 columns
-  @media (max-width: 953px) and (min-width: 649px) {
+  @media (max-width: $twoColumnWidthMax) and (min-width: calc($oneColumnWidthMax + 1px)) {
     width: 588px;
   }
 
-  @media (max-width: 648px) {
+  @media (max-width: $oneColumnWidthMax) {
     width: 100%;
   }
 }
